--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,39 @@ version: "3.9"
 services:
   frontend:
     build:
-      context: ../ #your context (my -> project -> src,Docker,confings and more...)
-      dockerfile: ./Dockerfile.frontend # path to dockerfile FROM CONTEXT
+      context: ../
+      dockerfile: ./Dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 3
+    ports:
+      - target: 3000
+        published: 3000-3002
+    networks:
+      - "digiboo"
+
+  frontend_test:
+    build:
+      context: ../
+      dockerfile: ./Dockerfile
     restart: always
     ports:
-      - "8080:8080"
+      - "3010:3000"
+    networks:
+      - "digiboo"
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - "8080:80"
+    depends_on:
+      - frontend
+      - frontend_test
+    networks:
+      - "digiboo"
+
+networks:
+  digiboo:
